adding .travis.yml and deploy.sh files

--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "dependencies": {
     "body-parser": "~1.4.2",
     "express": "~4.5.1",
+    "install": "^0.12.2",
     "method-override": "~2.0.2",
     "mongoose": "~3.8.0",
     "node-cmd": "^3.0.0",
-    "node-ssh": "^5.1.2"
+    "node-ssh": "^5.1.2",
+    "npm": "^6.4.1"
   }
 }
